# Gene-Expression-Analysis

./: .gitignore  README.MD  pyproject.toml
data/: download_dataset.py
data/output/: .~lock.df_stats.csv#  1024_stats.csv  128_stats.csv  16_stats.csv  256_stats.csv  512_stats.csv  64_stats.csv  8_stats.csv  cluster_0_brain_region_names.txt  cluster_1_brain_region_names.txt  cluster_2_brain_region_names.txt  df_stats.csv  df_stats_cluster_1.csv  df_stats_cluster_2.csv
notebooks/: CS_00_Data_Transformation.ipynb  CS_01_First Analysis.ipynb  CS_02_Statistical_Testing.ipynb  CS_02_Statistical_Testing_Clustered.ipynb  CS_02_Testing.ipynb  CS_03_Effect_VS_Sample_size.ipynb  CS_03_Effect_VS_Sample_size_Brain_Regions.ipynb  CS_04_Effect_VS_Sample_Size_Clustered.ipynb  CS_04_Effective_Regions_Unsupervised.ipynb  CS_05_Effective_Regions_Unsupervised.ipynb  CS_06_P-value_Power_VS_Sample_size.ipynb  CS_07_Brain_Region_Effect_Size_VIsualization_Clustered.ipynb
results/stats/: 32_stats.csv  df_stats.csv  df_stats_cluster_0.csv
src/: download_dataset.py
src/configs/: config_parser.py  data_config.yaml
src/exp/: test_exp.py
src/preprocessing/: create_meta_donor_csv.py  eda.py  meta_donor_creation.py  transform_data.py  transform_data_json.py
src/utils/: data.py  memory_management.py  plots.py  sampling.py  statistics_utils.py
